...
  }

  return (
    <Animated.View style={styles.container} layout={LinearTransition.springify().damping(80).stiffness(200)}>
      <ListBase<TMovie>
        ref={listRef}
        testID='favorite-list'
        keyExtractor={(item) => item.id}
        renderItem={renderItem}
        onRefreshProp={getData}
        onLoadMoreProp={getData}
        ItemSeparatorComponent={() => <View style={styles.itemSeparator} />}
        limit={LIMIT}
        skeleton={() => <LoadingHome testID='loading-favorite' />}
      />
    </Animated.View>
  )
}

const createStyles = (theme: SystemTheme) => {
...
