...
        keyExtractor={(item) => item.id}
        renderItem={renderItem}
        onRefreshProp={getData}
        onLoadMoreProp={getData}
        ItemSeparatorComponent={() => <View style={styles.itemSeparator} />}
        limit={LIMIT}
        skeleton={() => <LoadingHome testID={'loading-home'} />}
        ListHeaderComponent={ListHeaderComponent}
        testID='list-home'
      />
    </Animated.View>
  )
}

const createStyles = (theme: SystemTheme) => {
...
