...
        <View style={{ paddingHorizontal: HS._16, gap: VS._6 }}>
          <TextBase title={item.title} fontSize={16} fontWeight={600} numberOfLines={2} />
          <TextBase title={item.description} numberOfLines={3} />
        </View>
        <View style={styles.footerZeroBottom}>
          <Pressable testID={`${name}-button-${index}`} style={favorite ? styles.actionFooterActive : styles.actionFooter} onPress={onPressFavorite} hitSlop={HIT_SLOP_EXPAND_10}>
            <TextBase color={favorite ? theme.background : theme.secondaryColor} fontSize={15} fontWeight={"600"} title={favorite ? "Saved" : "Save"} />
          </Pressable>
          {
            name !== "booking" && (
              <Pressable style={[styles.actionFooter]} onPress={onPressMovie}>
                <TextBase color={theme.secondaryColor} fontSize={15} fontWeight={"600"} title={Boolean(item.is_booked) ? "Booked" : "Book"} />
              </Pressable>
...
